--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.7.9",
     "flowbite-react": "^0.12.13",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.2",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
